fixed website view on iphone

--- a/style.css
+++ b/style.css
@@ -102,6 +102,8 @@ body {
 
 .navbtn1 {
     margin: 0;
+    padding: 0;
+    float: left;
 }
 
 .btn {
